# editor-core

./: .gitignore  .travis.yml  CHANGELOG.md  COPYING.txt  Cargo.lock.orig  Cargo.toml  README.md
examples/assets/audio/: LICENSE_AUDIO.txt
examples/pong/: bundle.rs  main.rs  pong.rs
examples/pong/systems/: bounce.rs  mod.rs  move_balls.rs  paddle.rs  score_text.rs  winner.rs
src/: bundle.rs  editor_log.rs  lib.rs  read_resource.rs  serializable_entity.rs  type_set.rs  types.rs  write_resource.rs
src/systems/: create_entities.rs  destroy_entities.rs  editor_input.rs  editor_receiver.rs  editor_sender.rs  entity_handler.rs  mod.rs  read_component.rs  read_resource.rs  sync_editor.rs  write_component.rs  write_resource.rs
tests/: data.rs  registration.rs  resource.rs  skeptic.rs
