[package]
name = "amethyst-editor-sync"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]

[dependencies]
amethyst = { version = "0.8" }
crossbeam-channel = "0.2.4"
log = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
env_logger = "0.5.13"

[patch.crates-io]
# Tracking the develop branch of the upstream repo.
amethyst = { git = "https://github.com/amethyst/amethyst", rev = "7938002" }
