[package]
name = "amethyst-editor-sync"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
description = "Allows an Amethyst game to connect to an editor."
license = "MIT OR Apache-2.0"
repository = "https://github.com/randomPoison/amethyst-editor-sync"
documentation = "https://docs.rs/amethyst-editor-sync"

[dependencies]
amethyst = "0.8"
crossbeam-channel = "0.2.4"
log = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
env_logger = "0.5.13"
