[package]
name = "amethyst-editor-sync"
version = "0.3.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
description = "Allows an Amethyst game to connect to an editor."
license = "MIT OR Apache-2.0"
repository = "https://github.com/randomPoison/amethyst-editor-sync"
documentation = "https://docs.rs/amethyst-editor-sync"
readme = "README.md"
build = "build.rs"
edition = "2018"

[dependencies]
amethyst = "0.10.1"
crossbeam-channel = "0.3.2"
log = "0.4.4"
log-once = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shred-derive = "0.5"

[dev-dependencies]
env_logger = "0.5.13"
skeptic = "0.13"
tap = "0.3.0"

[build-dependencies]
skeptic = "0.13"
